@@ -8,6 +8,7 @@ Bug fixes:
 
  - Fix problem with empty diff views when file specs were passed on the
    command line.
+ - Fix segfault when starting tig in pager mode.
 
 tig-0.16
 --------
